# Hyko-toolkit

./: .dockerignore  .env.example  .example.env  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  build-push-all-non-gpu.py  build-push-all.py  config.py  main.py  model_selection.py  publish-package.sh  pyproject.toml  requirements.txt  set-hyko-sdk-version-for-cuda-dockerfiles.py  set-hyko-sdk-version.py  setup.cfg  test.py  todo.txt  utils.py
.github/configs/: release-please-config.json  release-please-manifest.json
.github/workflows/: build-push-base.yml  housekeeping-workflow.yml  release-please.yml  sdk-workflow.yml
ai_sdk/example/: README.md  image-build-example.sh  main.py
ai_sdk/math/add/: main.py
ai_sdk/math/divide/: main.py
ai_sdk/math/multiply/: Dockerfile  main.py
ai_sdk/math/subtract/: Dockerfile  main.py
automatic_prototyping/: .env  .gitignore  Makefile  README.md  main.ipynb  requirements.txt  setup.py
automatic_prototyping/.ipynb_checkpoints/: main_test-checkpoint.ipynb
automatic_prototyping/data/: model_db.json  model_id_descr_map.json
automatic_prototyping/src.egg-info/: PKG-INFO  SOURCES.txt
automatic_prototyping/src/const_task_planning/: .gitignore  HykoChat.py  TODO.md  grammar.py  model_base.py  model_db_class.py  model_db_parser.py  scoping.py  task_planning.py
automatic_prototyping/src/model_selection/: model_selection.py
automatic_prototyping/src/openai/: requests.py
automatic_prototyping/src/prompts/: prompts.py
automatic_prototyping/src/task_planning/: task_planning.py
automatic_prototyping/src/utils/: utils.py
common_dockerfiles/: base.Dockerfile  hyko-sdk-gpu.Dockerfile  hyko-sdk-medium.Dockerfile  hyko-sdk-tiny.Dockerfile  hyko-sdk.Dockerfile  torch-cuda.Dockerfile
functions/math/add/: main.py
functions/math/divide/: main.py
functions/math/multiply/: main.py
functions/math/subtract/: main.py
functions/models/: model_db.py
functions/natural_language_processing/text_sentence_splitter_regex/: main.py
functions/natural_language_processing/top_k_text/: main.py
hyko_sdk/: __init__.py  definitions.py  error.py  exceptions.py  function.py  io.py  metadata.py  models.py  types.py  utils.py
hyko_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hyko_toolkit/: __init__.py  callbacks_utils.py  exceptions.py  models.py  node_group.py  registry.py
hyko_toolkit/apis/: __init__.py  api_registry.py
hyko_toolkit/apis/llms/: metadata.py
hyko_toolkit/apis/sheets/: common.py
hyko_toolkit/callbacks_utils/: huggingface_utils.py  notion_utils.py  sheets_utils.py
hyko_toolkit/callbacks_utils/notion_utils/: append_to_page.py  find_database_item.py  helpers.py  insert_database_row.py  notion_utils.py  read_database_row.py  shared.py
hyko_toolkit/functions/: __init__.py
hyko_toolkit/functions/plotting/: Dockerfile
hyko_toolkit/io/: __init__.py
hyko_toolkit/io/audio/: metadata.py
hyko_toolkit/io/csv/: metadata.py
hyko_toolkit/io/image/: metadata.py
hyko_toolkit/io/input/: metadata.py
hyko_toolkit/io/list/: number_metadata.py  text_metadata.py
hyko_toolkit/io/number/: metadata.py
hyko_toolkit/io/output/: metadata.py
hyko_toolkit/io/pdf/: metadata.py
hyko_toolkit/io/sheets/: metadata.py
hyko_toolkit/io/text/: metadata.py
hyko_toolkit/io/video/: metadata.py
hyko_toolkit/models/: __init__.py
hyko_toolkit/models/multimodal/: Dockerfile
hyko_toolkit/models/natural_language_processing/: Dockerfile
hyko_toolkit/models/similarity_search/: Dockerfile  metadata.py
hyko_toolkit/utils/: __init__.py  utils_registry.py
scripts/: build-push-all-non-gpu.py  build-push-all.py  common.py  model_counter.sh  publish-package.sh  script-examples.md  sdk-builder.py  set-hyko-sdk-version.py  setup-env.sh  setup.sh  toolkit-builder.py  toolkit_builder.py
sdk/OpenAI/dalle-2/: main.py  (+1 more)
sdk/common/: io.py  metadata.py
sdk/example/: Dockerfile  requirements.txt
sdk/few-shot-classification/: requirements.txt
task_planning/: main.ipynb  requirements.txt
test_task_plans/: test_task_plans.py
(+1185 files in other folders)
