[tool.poetry]
name = "hyko_sdk"
version = "4.0.2"
description = "Hyko's Software Development Kit"
authors = ["Ouassim Abdelmalek Ghribi <oag@big-mama.io>", 
        "Hachem Betrouni <hb@big-mama.io>", 
        "Yousra Anfel Boucetta <jab@big-mama.io>"]

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = "^0.100.1"
pydantic = "^2.5.3"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.9"
gitlint = "^0.19.1"
httpx = {version = "0.24.1", extras = ["h2"]}


[tool.poetry.group.io.dependencies]
numpy = "^1.26.4"
pillow = "^10.2.0"
soundfile = "^0.12.1"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
