[tool.poetry]
name = "hyko_toolkit"
version = "2.1.0"
authors = []
description = "Collection of Models/Functions/APIs in hyko"

[tool.poetry.dependencies]
python = "^3.11.6"
hyko_sdk = {git = "https://github.com/BIGmama-technology/Hyko-sdk.git", branch = "development"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.9"
gitlint = "^0.19.1"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
