[metadata]
name = hyko_sdk
version = 0.1.15
author = Abdelmadjid Dahmani, Lotfi Lehamel
author_email = amd2@big-mama.io, ll@big-mama.io
url = https://hyko.ai

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pydantic
    opencv-python
    torchaudio
[options.packages.find]
exclude =
    venv*
    sdk*