[metadata]
name = hyko_sdk
version = 0.1.26
author = Abdelmadjid Dahmani, Lotfi Lehamel
author_email = amd2@big-mama.io, ll@big-mama.io
url = https://hyko.ai

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pydantic==1.10.9
    pillow
    soundfile
    numpy
    fastapi
[options.packages.find]
exclude =
    venv*
    sdk*