[metadata]
name = hyko_sdk
version = 0.4.0
author = Abdelmadjid Dahmani, Lotfi Lehamel
author_email = amd2@big-mama.io, ll@big-mama.io
url = https://hyko.ai

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pydantic==2.1.1
    pillow>=10.0.0
    soundfile>=0.12.1
    numpy>=1.25.2
    fastapi==0.100.1
    h2>=4.1.0
    httpx>=0.24.1
    tqdm>=4.0

[options.packages.find]
exclude =
    venv*
    sdk*

[options.package_data]
hyko_sdk = py.typed